[package]
name = "test-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.3"
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = "0.2.0"
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.2.18"
x86_64 = "0.14.10"

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33         # (0x10 << 1) | 1



[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
