[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.4"
x86_64 = "0.14.10"
spin = "0.9.8"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
bootloader-x86_64-common = "0.11.4"
ata_x86 = "0.1.1"
embedded-io = "0.5"
cmos-rtc = "0.1.2"
xmas-elf = "0.9"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = ["alloc"]

[dependencies.log]
version = "0.4.17"
default-features = false

[dependencies.chrono]
version = "0.4.30"
default-features = false

[dependencies.iced-x86]
version = "1.20"
default-features = false
features = ["no_std", "decoder", "nasm"]